cargo-features = ["strip"]

[package]
name = "wiigui"
version = "0.1.0"
edition = "2021"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", opt-level = "s" }

[dependencies]
ogc-rs = { path = "../ogc-rs", features = ["ffi"] }
embedded-graphics = "0.7"
